--- a/src/ressources/files/update.yml
+++ b/src/ressources/files/update.yml
@@ -1,2 +1,2 @@
-version: '0.3'
-updateUrl: 'https://github.com/luamod1337/ZeroMenu/releases/download/v0.3/ZeroMenu.rar'
+version: '0.1'
+updateUrl: 'https://github.com/luamod1337/2Take1Tool/releases/download/0.1/2Take1Tool.jar'
