bugfix fresh install and missing lang.yml added error var to lang.yml (an update requieres the tool to be run as admin)

--- a/src/ressources/files/lang_Deutsch.yml
+++ b/src/ressources/files/lang_Deutsch.yml
@@ -3,7 +3,7 @@ UPDATE_FOUND_TITLE: 'Update gefunden!'
 UPDATE_DOWNLOADED: 'Download nach <path> erfolgreich'
 SUCCESSFULL: 'Erfolg'
 ERROR: 'Fehler'
-DOWNLOAD_ERROR: 'Downloadfehler <updateUrl>'
+DOWNLOAD_ERROR: 'Downloadfehler <updateUrl> <error> Bitte als Admin starten!'
 UPDATE_CONFIGURATION_ERROR: 'Fehler: Kein Eintrag <updateUrl> oder <version> gefunden!'
 ERROR_WEBPAGE: 'Fehler beim aufrufen von <updateUrl>'
 ERROR_MISSING_PACKFILE: 'Packfile <Packpath> nicht gefunden!'
