--- a/src/ressources/files/lang_English.yml
+++ b/src/ressources/files/lang_English.yml
@@ -3,7 +3,7 @@ UPDATE_FOUND_TITLE: 'Update found!'
 UPDATE_DOWNLOADED: 'Download to <path> successful'
 SUCCESSFULL: 'Success'
 ERROR: 'Error'
-DOWNLOAD_ERROR: 'Download error <updateUrl>'
+DOWNLOAD_ERROR: 'Download error <updateUrl> <error> Please start as admin'
 UPDATE_CONFIGURATION_ERROR: 'Error: No <updateUrl> or <version> entry found!'
 ERROR_WEBPAGE: 'Error when calling <updateUrl>'
 ERROR_MISSING_PACKFILE: 'Packfile <packpath> not found!'
