--- a/src/ressources/files/lang_Deutsch.yml
+++ b/src/ressources/files/lang_Deutsch.yml
@@ -33,6 +33,7 @@ DEINSTALL: 'deinstallieren'
 VERSION: 'Version'
 PACK_DEINSTALLED: '<name> Version: <version> deinstalliert'
 PACK_INSTALLED: '<name> Version: <version> installiert'
+PACK_ERROR: 'Fehler beim Laden von <name>, <error>'
 WEBPACK_INSTALLED: '<name> Version: <version> installiert, du kannst es in dessen Kategorie finden!'
 REQUIRED_RESTART_TITLE: '2Take1Tool neustarten ?'
 REQUIRED_RESTART: '2Take1Tool muss neu gestartet werden um zu updaten, jetzt neu starten ?'
