--- a/src/ressources/files/lang_English.yml
+++ b/src/ressources/files/lang_English.yml
@@ -36,3 +36,4 @@ PACK_INSTALLED: '<name> Version: <version> installed'
 WEBPACK_INSTALLED: '<name> Version: <version> installed, you can find it in its category!'
 REQUIRED_RESTART_TITLE: 'Restart 2Take1Tool ?'
 REQUIRED_RESTART: '2Take1Tool must be restarted to update, restart now ?'
+PACK_ERROR: 'Error loading Pack <name>, <error>'
