--- a/src/ressources/files/lang_French.yml
+++ b/src/ressources/files/lang_French.yml
@@ -36,3 +36,4 @@ PACK_INSTALLED: '<name> Version: <version> installée'
 WEBPACK_INSTALLED: '<name> Version : <version> installée, vous pouvez la trouver dans sa catégorie !'
 REQUIRED_RESTART_TITLE: '2Take1Tool restart ?'
 REQUIRED_RESTART: '2Take1Tool doit être redémarré pour mettre à jour, redémarrer maintenant ?'
+PACK_ERROR: 'Erreur de chargement du Pack <name>, <error>'
