added install pack programm paramters (requieres the packs path)

--- a/src/ressources/files/lang_Deutsch.yml
+++ b/src/ressources/files/lang_Deutsch.yml
@@ -37,3 +37,5 @@ PACK_ERROR: 'Fehler beim Laden von <name>, <error>'
 WEBPACK_INSTALLED: '<name> Version: <version> installiert, du kannst es in dessen Kategorie finden!'
 REQUIRED_RESTART_TITLE: '2Take1Tool neustarten ?'
 REQUIRED_RESTART: '2Take1Tool muss neu gestartet werden um zu updaten, jetzt neu starten ?'
+SELECT_PACK_TYP: 'Bitte wähle einen 2Take1Pack Filetyp aus'
+QUESTION_INSTALL_PACK: 'Soll <pack> installiert werden ?'
