added gif support, added ui pack support, changed some design

--- a/src/ressources/files/lang_Deutsch.yml
+++ b/src/ressources/files/lang_Deutsch.yml
@@ -15,6 +15,7 @@ ERROR_LOADING: 'Fehler beim Laden von <file> -> <object>'
 DUPLICATE_PACK: 'Bereits installiertes Packet <name>:<version> gefunden'
 SELECT_PACK: 'Selektiere ein Packet mit dem Typ <typ>'
 TYP_SPRITES: 'Sprites'
+TYP_UI: 'UI'
 TYP_LUA_SCRIPTS: 'Lua Scripts'
 TYP_SE_PROTECTIONS: 'SE Protections'
 TYP_OBJECTS: 'Objekte'
