--- a/src/ressources/files/lang_English.yml
+++ b/src/ressources/files/lang_English.yml
@@ -15,6 +15,7 @@ ERROR_LOADING: 'Error loading <file> -> <object>'
 DUPLICATE_PACK: 'Already installed package <name>:<version> found'
 SELECT_PACK: 'Select a package with the type <typ>.'
 TYP_SPRITES: 'Sprites'
+TYP_UI: 'UI'
 TYP_LUA_SCRIPTS: 'Lua Scripts'
 TYP_SE_PROTECTIONS: 'SE Protections'
 TYP_OBJECTS: 'Objects'
