--- a/src/ressources/files/lang_French.yml
+++ b/src/ressources/files/lang_French.yml
@@ -15,6 +15,7 @@ ERROR_LOADING: 'Erreur de chargement <file> -> <objet>'
 DUPLICATE_PACK: 'Paquet déjà installé <name>:<version> trouvé'
 SELECT_PACK: 'Sélectionnez un paquet avec le type <type>.'
 TYP_SPRITES: 'Sprites'
+TYP_UI: 'UI'
 TYP_LUA_SCRIPTS: 'Lua Scripts'
 TYP_SE_PROTECTIONS: 'SE Protections'
 TYP_OBJECTS: 'Objets'
